# moddingapi_cmake

./: .gitignore  CMakeLists.txt  README.md
src/: hook_helper.h  log.h  mem.h  plugin.cpp  plugin.h
